--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <main>
         <img class="sg-logo" src="images/squidgame_logo.png" alt="Squid Games logo">
-        <img class="final-game-img" src="images/final_game.png" alt="The final game">
+        <img class="only-game-img" src="https://fontmeme.com/temporary/c03bb1e0ee30a3559610a3f8c65f3efc.png" alt="The only game">
         <h3 class="welcome-msg">Welcome Player <span class="player-num"></span>. Congratulations on making it this far. In order to win your handsome cash prize, you must beat the Computer in a game of Tic Tac Toe</h3>
         <p class="rules">First to  win...</p>
        <div class="wrapper">
